[gd_scene load_steps=3 format=2]

[ext_resource path="res://Store.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Panel" type="Panel"]
margin_left = 200.0
margin_top = 104.0
margin_right = 820.0
margin_bottom = 500.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="."]
margin_left = 231.864
margin_top = 55.2849
margin_right = 392.864
margin_bottom = 118.285
text = "[money]
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoreCounterLabel" type="Label" parent="."]
margin_left = 204.57
margin_top = 136.0
margin_right = 244.57
margin_bottom = 150.0
text = "[0]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StadiumCounterLabel" type="Label" parent="."]
margin_left = 204.57
margin_top = 264.0
margin_right = 244.57
margin_bottom = 278.0
text = "[0]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MallCounterLabel" type="Label" parent="."]
margin_left = 204.57
margin_top = 200.0
margin_right = 244.57
margin_bottom = 214.0
text = "[0]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickButton" type="Button" parent="."]
margin_left = 272.0
margin_top = 80.0
margin_right = 356.0
margin_bottom = 115.0
text = "Click me!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" type="Button" parent="."]
margin_left = 44.5699
margin_top = 128.0
margin_right = 128.57
margin_bottom = 163.0
disabled = true
text = "BUY STORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButtonMall" type="Button" parent="."]
margin_left = 44.5699
margin_top = 192.0
margin_right = 128.57
margin_bottom = 227.0
disabled = true
text = "BUY MALL "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButtonStadium" type="Button" parent="."]
margin_left = 24.0
margin_top = 249.757
margin_right = 130.0
margin_bottom = 284.757
disabled = true
text = "BUY STADIUM "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoreProg" type="ProgressBar" parent="."]
margin_left = 248.0
margin_top = 136.0
margin_right = 352.0
margin_bottom = 150.0
custom_colors/font_color = Color( 0.901961, 0.117647, 0.117647, 1 )
custom_colors/font_color_shadow = Color( 0.921569, 0.360784, 0.360784, 1 )
max_value = 35.0
step = 1.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StoreProg"]
margin_left = 112.0
margin_right = 292.0
margin_bottom = 16.0
text = "Make enough money to buy a store!"

[node name="StoreProg3" type="ProgressBar" parent="."]
visible = false
margin_left = 248.0
margin_top = 264.0
margin_right = 352.0
margin_bottom = 278.0
custom_colors/font_color = Color( 0.901961, 0.117647, 0.117647, 1 )
custom_colors/font_color_shadow = Color( 0.921569, 0.360784, 0.360784, 1 )
max_value = 2.0
step = 1.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StoreProg3"]
margin_left = 112.0
margin_top = -8.0
margin_right = 409.0
margin_bottom = 32.0
text = "Buy enough malls to become a 
stadium owner!"

[node name="StoreProg2" type="ProgressBar" parent="."]
visible = false
margin_left = 248.0
margin_top = 200.0
margin_right = 352.0
margin_bottom = 214.0
custom_colors/font_color = Color( 0.901961, 0.117647, 0.117647, 1 )
custom_colors/font_color_shadow = Color( 0.921569, 0.360784, 0.360784, 1 )
max_value = 3.0
step = 1.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StoreProg2"]
margin_left = 112.0
margin_right = 152.0
margin_bottom = 14.0
text = "Buy enough stores to unlock the mall!"

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 224.0
margin_bottom = 38.0
text = "Build your wealth step-by-step!"
uppercase = true

[node name="Label2" type="Label" parent="."]
margin_left = 424.0
margin_top = 16.0
margin_right = 536.0
margin_bottom = 30.0
text = "3 stores -> 1 Mall"
uppercase = true

[node name="Label3" type="Label" parent="."]
margin_left = 424.0
margin_top = 40.0
margin_right = 555.0
margin_bottom = 54.0
text = "2 Malls -> 1 Stadium"
uppercase = true

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_left = 0.503
anchor_top = 0.5
anchor_right = 0.503
anchor_bottom = 0.5
margin_left = -223.86
margin_top = -150.0
margin_right = 232.14
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Popup"]
position = Vector2( 224, 192 )
scale = Vector2( 3.5, 3.75 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Popup"]
margin_left = 168.0
margin_top = 264.0
margin_right = 277.0
margin_bottom = 336.0
custom_colors/font_outline_modulate = Color( 0.603922, 0.0941176, 0.0941176, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "You win "
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ClickButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="BuyButtonMall" to="." method="_on_BuyButtonMall_pressed"]
[connection signal="pressed" from="BuyButtonStadium" to="." method="_on_BuyButtonStadium_pressed"]
